--- a/.github/workflows/build-caddy.yml
+++ b/.github/workflows/build-caddy.yml
@@ -9,8 +9,8 @@ on:
       - '.github/workflows/build-caddy.yml'
       - 'Caddy/Dockerfile'
   schedule:
-    # Build the image daily
-    - cron: '15 0 * * *'
+    # Build the image weekly
+    - cron: '15 0 * * 5'
 
 env:
   REGISTRY: ghcr.io
