--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ Traccar/.env
 Traccar/traccar.xml
 Vaultwarden/.env
 Headwind/.env
+F-Droid/config.yml
+F-Droid/keystore.p12
+F-Droid/metadata/*
+!F-Droid/metadata/*.yml
