Cleaned up the nginx.

--- a/F-Droid/Dockerfile
+++ b/F-Droid/Dockerfile
@@ -23,7 +23,7 @@ RUN apt-get update \
 RUN printf '#!/bin/sh\njava -jar /usr/lib/android-sdk/build-tools/debian/apksigner.jar "$@"' > /usr/local/bin/apksigner \
 	&& chmod +x /usr/local/bin/apksigner
 RUN wget -qO /download.py https://gitlab.com/CalyxOS/calyxos-fdroid-repo/-/raw/99d7f16b53bf55b76bedc15985da1f1da7084c2b/download.py
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY --chown=nginx:nginx nginx.conf /etc/nginx/nginx.conf
 USER nginx
 WORKDIR /fdroid
 RUN fdroid init -v \
