Hardcode bin path for f-droid service

--- a/F-Droid/fdroid-check.service
+++ b/F-Droid/fdroid-check.service
@@ -3,4 +3,4 @@ Description=Check if fdroid.service is running and execute commands
 
 [Service]
 Type=oneshot
-ExecStart=/bin/bash -c 'if systemctl --user is-active --quiet fdroid.service; then podman exec --user 101:101 --workdir=/ fdroid python3 /download.py; podman exec --user 101:101 --workdir=/fdroid fdroid fdroid update; fi'
+ExecStart=/bin/bash -c 'if /usr/bin/systemctl --user is-active --quiet fdroid.service; then /usr/bin/podman exec --user 101:101 --workdir=/ fdroid python3 /download.py; /usr/bin/podman exec --user 101:101 --workdir=/fdroid fdroid fdroid update; fi'
