--- a/Caddy/Caddyfile
+++ b/Caddy/Caddyfile
@@ -142,6 +142,9 @@ sync.{$MY_DOMAIN} {
 	import cloudflare
 	import lan
 	encode zstd gzip
+	request_body {
+		max_size 50000MB
+	}
 	handle @allowed {
 		reverse_proxy resilio-sync:8888
 	}
@@ -172,6 +175,9 @@ immich.{$MY_DOMAIN} {
 	import log
 	import cloudflare
 	encode zstd gzip
+	request_body {
+		max_size 10000MB
+	}
 	route {
 		crowdsec
 		reverse_proxy immich_server:2283
