Stricter nginx for F-Droid

--- a/F-Droid/nginx.conf
+++ b/F-Droid/nginx.conf
@@ -12,8 +12,12 @@ http {
     scgi_temp_path /tmp/scgi_temp;
     server {
         listen 8080;
+        root /fdroid;
         location / {
-            root /fdroid;
+            return 403;
+        }
+        location /fdroid/repo {
+            try_files $uri $uri/ =404;
         }
     }
     include /etc/nginx/conf.d/*.conf;
