--- a/F-Droid/nginx.conf
+++ b/F-Droid/nginx.conf
@@ -16,7 +16,7 @@ http {
         location / {
             return 403;
         }
-        location /fdroid/repo {
+        location /repo {
             try_files $uri $uri/ =404;
         }
     }
