Added more tmpfs to ebook2audiobookpiper

--- a/ebook2audiobookpiper/compose.yml
+++ b/ebook2audiobookpiper/compose.yml
@@ -7,6 +7,9 @@ services:
       - /elysium/ebook2audiobookpiper-data:/app:Z
     tmpfs:
       - /nonexistent/nltk_data:noexec,nosuid,nodev
+      - /app/Working_files:mode=777,noexec,nosuid,nodev
+      - /app/Chapter_wav_files:mode=777,noexec,nosuid,nodev
+      - /tmp:mode=777,noexec,nosuid,nodev
     read_only: true
     cap_drop:
       - "ALL"
