--- a/F-Droid/compose.yml
+++ b/F-Droid/compose.yml
@@ -9,7 +9,7 @@ services:
       - ./apks.json:/apks.json:Z,ro
       - ./metadata:/fdroid/metadata:Z
       - ./keystore.p12:/keystore.p12:Z,ro
-      - /elysium/fdroid-data:/fdroid:Z
+      - /elysium/fdroid-data:/fdroid/repo:Z
       - /elysium/fdroid-data:/cache:Z
     user: "101:101"
     cap_drop:
@@ -29,6 +29,8 @@ services:
     labels:
       com.centurylinklabs.watchtower.enable: "true"
       io.containers.autoupdate: "registry"
+    tmpfs:
+      - /fdroid:mode=777,nodev,noexec,nosuid
 
 networks:
   caddy_net:
