--- a/F-Droid/Dockerfile
+++ b/F-Droid/Dockerfile
@@ -23,8 +23,10 @@ RUN apt-get update \
 RUN printf '#!/bin/sh\njava -jar /usr/lib/android-sdk/build-tools/debian/apksigner.jar "$@"' > /usr/local/bin/apksigner \
 	&& chmod +x /usr/local/bin/apksigner
 RUN sed -i -e '/repo_url/d' -e '/archive_url/d' /usr/local/lib/python*/dist-packages/fdroidserver/common.py
-COPY --chown=nginx:nginx config.yml /fdroid/config.yml
 RUN wget -qO /download.py https://gitlab.com/CalyxOS/calyxos-fdroid-repo/-/raw/99d7f16b53bf55b76bedc15985da1f1da7084c2b/download.py
 COPY --chown=nginx:nginx nginx.conf /etc/nginx/nginx.conf
+RUN echo -e '#!/bin/sh\n/usr/local/bin/fdroid update' > /docker-entrypoint.d/40-fdroid-update.sh
+RUN chmod +x /docker-entrypoint.d/40-fdroid-update.sh
 USER nginx
 WORKDIR /fdroid
+RUN echo -e "---\nsdk_path: /usr/lib/android-sdk\nrepo_url: {env: REPO_URL}\nrepo_name: {env: REPO_NAME}\nrepo_keyalias: host.containers.internal\nkeystore: /keystore.p12\nkeystorepass: {env: KEYSTOREPASS}\nkeypass: {env: KEYPASS}\nkeydname: CN=host.containers.internal, OU=F-Droid" > config.yml
