Added uptime kuma app name

--- a/.github/workflows/build-uptime-kuma.yml
+++ b/.github/workflows/build-uptime-kuma.yml
@@ -15,8 +15,8 @@ on:
 jobs:
   deploy:
     name: Deploy app
-    runs-on: ubuntu-latest
-    concurrency: deploy-group    # optional: ensure only one action runs at a time
+    runs-on: ubuntu-24.04
+    concurrency: deploy-group
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
