--- a/Uptime_Kuma/Dockerfile
+++ b/Uptime_Kuma/Dockerfile
@@ -1,6 +1,6 @@
-FROM docker.io/louislam/uptime-kuma:1-alpine
+FROM docker.io/louislam/uptime-kuma:1
 
-RUN apk update && apk add ca-certificates iptables ip6tables && rm -rf /var/cache/apk/*
+RUN apt-get update && apt-get -y --upgrade && apt-get -y ca-certificates iptables ip6tables && rm -rf /var/cache/apt/*
 COPY --from=docker.io/tailscale/tailscale:stable /usr/local/bin/tailscaled /app/tailscaled
 COPY --from=docker.io/tailscale/tailscale:stable /usr/local/bin/tailscale /app/tailscale
 RUN mkdir -p /var/run/tailscale /var/cache/tailscale /var/lib/tailscale \
