--- a/Uptime_Kuma/Dockerfile
+++ b/Uptime_Kuma/Dockerfile
@@ -1,3 +1,4 @@
+
 FROM docker.io/louislam/uptime-kuma:1
 
 RUN curl -fsSL "https://pkgs.tailscale.com/stable/debian/$(grep VERSION_CODENAME /etc/os-release | cut -d= -f2).noarmor.gpg" | tee /usr/share/keyrings/tailscale-archive-keyring.gpg \
@@ -6,4 +7,4 @@ RUN curl -fsSL "https://pkgs.tailscale.com/stable/debian/$(grep VERSION_CODENAME
 	&& apt-get update && apt-get -y upgrade && apt-get install -y ca-certificates iptables tailscale && rm -rf /var/cache/apt/*
 RUN sed -i '$i tailscaled --state=/var/lib/tailscale/tailscaled.state --socket=/var/run/tailscale/tailscaled.sock &' /app/extra/entrypoint.sh \
 	&& sed -i '$i tailscale up --auth-key=${TAILSCALE_AUTHKEY} --hostname=uptime-kuma' /app/extra/entrypoint.sh \
-	&& sed -i '$i tailscale serve 3001' /app/extra/entrypoint.sh
+	&& sed -i '$i tailscale serve --http=80 localhost:3001' /app/extra/entrypoint.sh
