--- a/Uptime_Kuma/fly.toml
+++ b/Uptime_Kuma/fly.toml
@@ -4,9 +4,13 @@ app = "uptime-kuma-tailscale-asahi"
   source = "data"
   destination = "/app/data"
 
+[experimental]
+  allowed_public_ports = []
+  auto_rollback = false
+
 [[services]]
   [[services.ports]]
-    handlers = ["tls", "http"]
+    handlers = ["tls"]
     port = "443"
 
   [[services.http]]
@@ -15,14 +19,8 @@ app = "uptime-kuma-tailscale-asahi"
     allow = ["100.64.0.0/10"]
 
   [[services.http]]
-    handlers = ["http"]
+    handlers = []
     port = "80"
-    force_https = true
-    allow = ["0.0.0.0/0"]
-    [[services.http.rules]]
-      path = "/*"
-      method = ["GET", "POST", "PUT", "DELETE"]
-      action = "deny"
 
 [http_service]
   auto_stop_machines = false
