Updated Caddyfile and try different crowdsec commit

--- a/Caddy/Caddyfile
+++ b/Caddy/Caddyfile
@@ -10,6 +10,13 @@
 		api_url http://crowdsec:8080
 		api_key {env.CROWDSEC_API_KEY}
 		ticker_interval 15s
+	}	{
+		tailscale {
+			auth_key {env.TAILSCALE_AUTH_KEY}
+			ephemeral true
+			state_dir /data/tailscale
+			webui false
+		}
 	}
 }
 
@@ -63,12 +70,34 @@
 	}
 }
 
+(tailscale) {
+	@allowed {
+		remote_ip 100.64.0.0/10
+	}
+	handle {
+		abort
+	}
+	tls {
+		get_certificate tailscale
+	}
+}
+
 vw.{$MY_DOMAIN} {
 	import safe
 	import nolog
 	import cloudflare
 	import lan
 	encode zstd gzip
+	handle @allowed {
+		reverse_proxy vaultwarden:80
+	}
+}
+
+:443 {
+	import safe
+	import nolog
+	import tailscale
+	bind tailscale/vw
 	handle @allowed {
 		reverse_proxy vaultwarden:80
 	}
@@ -85,6 +114,16 @@ hmdm.{$MY_DOMAIN} {
 	}
 }
 
+:443 {
+	import safe
+	import nolog
+	import tailscale
+	bind tailscale/hmdm
+	handle @allowed {
+		reverse_proxy headwind:8080
+	}
+}
+
 eb2ab.{$MY_DOMAIN} {
 	import safe
 	import nolog
@@ -96,12 +135,38 @@ eb2ab.{$MY_DOMAIN} {
 	}
 }
 
+:443 {
+	import safe
+	import nolog
+	import tailscale
+	bind tailscale/hmdm
+	handle @allowed {
+		reverse_proxy ebook2audiobookpiper:7860
+	}
+}
+
 fdroid.{$MY_DOMAIN} {
 	import safe
 	import nolog
 	import cloudflare
 	import lan
 	encode zstd gzip
+	handle @allowed {
+		reverse_proxy /repo/* fdroid:8080 {
+			header_up Location {http.request.scheme}://{http.request.host}/repo{http.request.uri}
+		}
+		@notRepo {
+			not path /repo*
+		}
+		redir @notRepo /repo/ 301
+	}
+}
+
+:443 {
+	import safe
+	import nolog
+	import tailscale
+	bind tailscale/fdroid
 	handle @allowed {
 		reverse_proxy /repo/* fdroid:8080 {
 			header_up Location {http.request.scheme}://{http.request.host}/repo{http.request.uri}
@@ -136,6 +201,16 @@ nitter.{$MY_DOMAIN} {
 	}
 }
 
+:443 {
+	import safe
+	import nolog
+	import tailscale
+	bind tailscale/nitter
+	handle @allowed {
+		reverse_proxy nitter-gluetun:8090
+	}
+}
+
 sync.{$MY_DOMAIN} {
 	import safe
 	import nolog
@@ -144,6 +219,16 @@ sync.{$MY_DOMAIN} {
 	encode zstd gzip
 	handle @allowed {
 		reverse_proxy resilio-sync:8888
+	}
+}
+
+:443 {
+	import safe
+	import nolog
+	import tailscale
+	bind tailscale/resilio
+	handle @allowed {
+		reverse_proxy resilio-sync:8090
 	}
 }
 
