Persistent tailscale state

--- a/Uptime_Kuma/fly.toml
+++ b/Uptime_Kuma/fly.toml
@@ -1,8 +1,13 @@
 app = "uptime-kuma-tailscale-asahi"
 
-[[mounts]]
+[mounts]
+  [[mounts]]
   source = "data"
   destination = "/app/data"
+
+  [[mounts]]
+  source = "tailscale"
+  destination = "/var/lib/tailscale"
 
 [experimental]
   allowed_public_ports = []
