--- a/.github/workflows/deploy-uptime-kuma.yml
+++ b/.github/workflows/deploy-uptime-kuma.yml
@@ -17,6 +17,7 @@ jobs:
     name: Deploy app
     runs-on: ubuntu-24.04
     concurrency: deploy-group
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
