--- a/Uptime_Kuma/Dockerfile
+++ b/Uptime_Kuma/Dockerfile
@@ -2,8 +2,8 @@ FROM docker.io/louislam/uptime-kuma:1 as malloc
 ARG VERSION=2024101200
 RUN apt-get update && apt-get install -y build-essential git openssh-client gnupg
 WORKDIR /malloc
-RUN	curl -sL -o signers https://grapheneos.org/allowed_signers
-ADD --keep-git-dir=true https://github.com/GrapheneOS/hardened_malloc.git#${VERSION} .
+RUN	curl -sL -o signers https://grapheneos.org/allowed_signers \
+	&& git clone https://github.com/GrapheneOS/hardened_malloc.git -b ${VERSION} .
 RUN --network=none \
     git config gpg.ssh.allowedSignersFile signers \
     && git verify-tag $(git describe --tags) \
