--- a/Uptime_Kuma/Dockerfile
+++ b/Uptime_Kuma/Dockerfile
@@ -3,9 +3,9 @@ ARG VERSION=2024101200
 RUN apt-get update && apt-get install -y build-essential git openssh-client gnupg
 WORKDIR /malloc
 RUN git clone https://github.com/GrapheneOS/hardened_malloc.git -b ${VERSION} . \
-	&& curl -sL -o signers https://grapheneos.org/allowed_signers
+	&& curl -sL -o /malloc/signers https://grapheneos.org/allowed_signers
 RUN --network=none \
-    git config gpg.ssh.allowedSignersFile signers \
+    && git config gpg.ssh.allowedSignersFile /malloc/signers \
     && git verify-tag ${VERSION} \
     && make CONFIG_NATIVE=false VARIANT=default
 
