--- a/Uptime_Kuma/fly.toml
+++ b/Uptime_Kuma/fly.toml
@@ -1,4 +1,5 @@
 app = "uptime-kuma-tailscale-asahi"
+primary_region = "ewr"
 
 [[mounts]]
   source = "data"
@@ -27,3 +28,7 @@ app = "uptime-kuma-tailscale-asahi"
   auto_start_machines = true
   min_machines_running = 1
   processes = ["app"]
+
+[[vm]]
+  size = "shared-cpu-1x"
+  memory = "256mb"
