--- a/F-Droid/fdroid-check.service
+++ b/F-Droid/fdroid-check.service
@@ -4,4 +4,5 @@ After=fdroid.service
 
 [Service]
 Type=oneshot
-ExecStart=/bin/sh -c '/usr/bin/podman exec --user 101:101 --workdir=/ fdroid python3 /download.py; /usr/bin/podman exec --user 101:101 --workdir=/fdroid fdroid fdroid update;'
+ExecStart=/usr/bin/podman exec --user 101:101 --workdir=/ fdroid python3 /download.py
+ExecStartPost=/usr/bin/podman exec --user 101:101 --workdir=/fdroid fdroid fdroid update
