--- a/F-Droid/Dockerfile
+++ b/F-Droid/Dockerfile
@@ -1,7 +1,6 @@
 FROM ghcr.io/nginxinc/nginx-unprivileged:stable-bookworm
 USER root
 ARG VERSION=2.3.4
-
 ENV LANG=C.UTF-8 \
     DEBIAN_FRONTEND=noninteractive
 RUN echo Etc/UTC > /etc/timezone \
@@ -25,9 +24,12 @@ RUN apt-get update \
 RUN printf '#!/bin/sh\njava -jar /usr/lib/android-sdk/build-tools/debian/apksigner.jar "$@"' > /usr/local/bin/apksigner \
 	&& chmod +x /usr/local/bin/apksigner
 RUN wget -qO /download.py https://gitlab.com/CalyxOS/calyxos-fdroid-repo/-/raw/99d7f16b53bf55b76bedc15985da1f1da7084c2b/download.py
-COPY --chown=nginx:nginx nginx.conf /etc/nginx/nginx.conf
+RUN printf "worker_processes  auto;\npid        /tmp/nginx.pid;\nevents {\n    worker_connections  1024;\n}\n\nhttp {\n    proxy_temp_path /tmp/proxy_temp;\n    client_body_temp_path /tmp/client_temp;\n    fastcgi_temp_path /tmp/fastcgi_temp;\n    uwsgi_temp_path /tmp/uwsgi_temp;\n    scgi_temp_path /tmp/scgi_temp;\n    server {\n        listen 8080;\n        root /fdroid;\n        location / {\n            return 403;\n        }\n        location /repo {\n            try_files \$uri \$uri/ =404;\n        }\n    }\n    include /etc/nginx/conf.d/*.conf;\n}\n" > /etc/nginx/nginx.conf \
+	&& chown nginx:nginx /etc/nginx/nginx.conf
 RUN printf '#!/bin/sh\n/usr/local/bin/fdroid update -v' > /docker-entrypoint.d/99-fdroid-update.sh \
 	&& chmod +x /docker-entrypoint.d/99-fdroid-update.sh
+RUN printf '#!/bin/bash\nfor apk in *.apk; do\n    if [[ -f "repo/$apk" ]]; then\n        json=$(androguard apkid "$apk")\n        package_name=$(echo "$json" | grep -oP \'(?<=")[^"]*(?="\)\' | head -n 2 | awk \'NR > 1\')\n        if [[ ! -f "metadata/$package_name.yml" ]]; then\n            rm "$apk"\n        fi\n    fi\ndone\n' > /usr/local/bin/cleanup \
+	&& chmod +x /usr/local/bin/cleanup
 USER nginx
 WORKDIR /fdroid
 RUN printf '\n---\nsdk_path: /usr/lib/android-sdk\nrepo_url: {env: REPO_URL}\nrepo_name: {env: REPO_NAME}\nrepo_keyalias: host.containers.internal\nkeystore: /keystore.p12\nkeystorepass: {env: KEYSTOREPASS}\nkeypass: {env: KEYPASS}\nkeydname: CN=host.containers.internal, OU=F-Droid' > config.yml \
